<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000080"
        android:textSize="18sp"
        android:layout_marginBottom="20sp"
        android:text="@string/txt_titulo" />

    <CheckBox
        android:id="@+id/ckbCinema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/ckb_cinema" />

    <CheckBox
        android:id="@+id/ckbFutebol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/ckb_futebol" />

    <CheckBox
        android:id="@+id/ckbGastronomia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/ckb_gastronomia" />

    <CheckBox
        android:id="@+id/ckbinformatica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/ckb_informatica" />

    <CheckBox
        android:id="@+id/ckbLiteratura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/ckb_literatura" />

    <CheckBox
        android:id="@+id/ckbTeatro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/ckb_teatro" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="20sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnExibir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="120sp"
            android:text="@string/btn_exibir" />

        <Button
            android:id="@+id/btnDesmarcar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="120sp"
            android:text="@string/btn_desmarcar" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtTotalSelecionados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_selecionados" />

</LinearLayout>